# MoChengRender

./: CMakeLists.txt  Readme.md  main.cpp
SoftRender/: BindingAttribute.hpp  Buffer.hpp  Description.hpp  FrameBuffer.hpp  Image.hpp  Math.hpp  Pipeline.hpp  Shader.hpp  Texture.hpp  VertexObjectArray.hpp  Window.hpp
SoftRender/Helper/: ConstData.hpp  Raster_Manager.hpp  Render_Manager.hpp
SoftRender/Math/: DataStruct.hpp  Math.hpp  Matrix.hpp  Vec.hpp
cmake/: sdl2-config.cmake
include/: Buffer.hpp  Description.hpp  FrameBuffer.hpp  Image.hpp  Mesh.hpp  Model.hpp  Pipeline.hpp  Shader.hpp  Texture.hpp  VertexObjectArray.hpp  Window.hpp
include/Helper/: Instance.hpp  Raster_Manager.hpp  Render_Manager.hpp
include/Math/: DataStruct.hpp  Math.hpp  Matrix.hpp  Vec.hpp
src/: Buffer.cpp  CMakeLists.txt  FrameBuffer.cpp  Image.cpp  Mesh.cpp  Model.cpp  Pipeline.cpp  Shader.cpp  Texture.cpp  VertexObjectArray.cpp  Window.cpp
src/Helper/: Raster_Manager.cpp  Render_Manager.cpp
